--- a/index.html
+++ b/index.html
@@ -25,12 +25,28 @@
         />
         <h1 class="profile__name">Mohamed El Refaei</h1>
         <p class="profile__location">Cairo, Egypt</p>
-        <p class="career__description">"Software Engineer - FrontEnd developer"</p>
+        <p class="career__description">
+          "Software Engineer - FrontEnd developer"
+        </p>
         <div class="social__container">
           <ul class="social__links">
-            <li><a href="#" class="link">GitHub</a></li>
-            <li><a href="#" class="link">Frontend Mentor</a></li>
-            <li><a href="#" class="link">LinkedIn</a></li>
+            <li>
+              <a href="https://github.com/MohamedELRefaei" class="link"
+                >GitHub</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.frontendmentor.io/profile/MohamedELRefaei"
+                class="link"
+                >Frontend Mentor</a
+              >
+            </li>
+            <li>
+              <a href="www.linkedin.com/in/mohamed-el-refaei" class="link"
+                >LinkedIn</a
+              >
+            </li>
             <li><a href="#" class="link">Twitter</a></li>
             <li><a href="#" class="link">Instagram</a></li>
           </ul>
