--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <div class="social__container">
           <ul class="social__links">
             <li>
-              <a href="https://github.com/MohamedELRefaei" class="link"
+              <a
+                href="https://github.com/MohamedELRefaei"
+                class="link"
+                target="_blank"
                 >GitHub</a
               >
             </li>
@@ -39,11 +42,15 @@
               <a
                 href="https://www.frontendmentor.io/profile/MohamedELRefaei"
                 class="link"
+                target="_blank"
                 >Frontend Mentor</a
               >
             </li>
             <li>
-              <a href="www.linkedin.com/in/mohamed-el-refaei" class="link"
+              <a
+                href="www.linkedin.com/in/mohamed-el-refaei"
+                class="link"
+                target="_blank"
                 >LinkedIn</a
               >
             </li>
